# jack-matchmaker

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  example_patterns.txt  jack-matchmaker.conf  pyproject.toml  setup.cfg  setup.py
jacklib-examples/: jack-transport-query.py  list_all_client_properties.py  list_all_port_properties.py  list_all_properties.py  list_port_info.py  print_port_pretty_name.py  set_port_pretty_name.py
jackmatchmaker/: __init__.py  __main__.py  jacklib.py  jacklib_helpers.py  version.py
packaging/arch/: PKGBUILD
systemd/: jack-matchmaker.service
