[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.version]
path = "jackmatchmaker/version.py"
pattern = "__version__ = \"(?P<version>.*?)\""


[tool.hatch.build]
exclude = [
  "/packaging",
  "/jacklib-examples",
]


[tool.hatch.build.targets.wheel]
packages = ["jackmatchmaker"]


[project]
name = "jack-matchmaker"
dynamic = ["version"]
description = "Auto-connect JACK ports as they appear using patterns"
license = "GPL-2.0"
authors = [
    { name = "Christopher Arndt", email = "info@chrisarndt.de" }
]
readme = "README.md"
license-files = { paths = ["LICENSE"] }
keywords = [
    "audio",
    "JACK",
    "MIDI",
    "multimedia",
    "music",
]
requires-python = ">=3.8"
dependencies = [
    "cachetools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Utilities",
]


[project.urls]
"Homepage" = "https://github.com/SpotlightKid/jack-matchmaker"
"Source" = "https://github.com/SpotlightKid/jack-matchmaker"
"Bug Tracker" = "https://github.com/SpotlightKid/jack-matchmaker/issues"


[project.scripts]
jack-matchmaker = "jackmatchmaker:main"


[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']


[tool.isort]
profile = "black"
line_length = 100

